--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+
 <link rel="shortcut icon" href="./img/favicon.ico">
 <link rel="stylesheet" href="index.css">
 <script>console.log("=(^. .^)=");</script>
