--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta property="og:title" content="trasta">
+<meta property="og:type" content="website">
+<meta property="og:description" content="trasta's portfolio page">
+<meta property="og:url" content="https://trasta298.github.io">
+<meta property="og:site_name" content="trasta">
+<meta property="og:image" content="https://md.trap.jp/uploads/upload_cb0b22c3307fd03d9f2a77551cd5c558.png">
 
 <head>
 	<link rel="shortcut icon" href="./img/favicon.ico">
