--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			<div class="page">
 				<div class="sub">Biography</div>
 				<div class="bio">
-					<div class="subsub">居住地</div>
+					<div class="fas fa-home"> 居住地</div>
 					<ul><li>東京都 品川区</li></ul>
-					<div class="subsub">所属</div>
+					<div class="fas fa-building"> 所属</div>
 					<ul>
 						<li>東京工業大学 生命理工学院 B1</li>
 						<li>東京工業大学デジタル創作同好会traP</li>
