--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 					<div class="fas fa-building"> 所属</div>
 					<ul>
 						<li>東京工業大学 生命理工学院 B1</li>
-						<li>東京工業大学デジタル創作同好会traP</li>
+							<li>
+								<a href="https://trap.jp" target="_blank" style="color:  rgb(0, 152, 223);">
+									東京工業大学デジタル創作同好会traP
+								</a>
+							</li>
 						<ul>
 							<li>代表補佐</li>
 							<li>SysAd, Algorithm, Graphic, Game, CTF</li>
