--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta property="og:description" content="trasta's portfolio page">
 <meta property="og:url" content="https://trasta298.github.io">
 <meta property="og:site_name" content="trasta">
-<meta property="og:image" content="https://md.trap.jp/uploads/upload_cb0b22c3307fd03d9f2a77551cd5c558.png">
+<meta property="og:image" content="https://md.trap.jp/uploads/upload_93ea3573d230c7dc5900d8fc06f81469.jpg">
 
 <head>
 	<link rel="shortcut icon" href="./img/favicon.ico">
