--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
 					<ul>
 						<li>東京工業大学 生命理工学院 B1</li>
 							<li>
-								<a href="https://trap.jp" target="_blank" style="color:  rgb(0, 152, 223);">
+								<a
+									href="https://trap.jp"
+									target="_blank"
+									style="color:rgb(0, 152, 223);"
+								>
 									東京工業大学デジタル創作同好会traP
 								</a>
 							</li>
